# Meetily-Local

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  clean.sh  dev.sh
frontend/: README.md  eslint.config.mjs  next.config.js  next.config.mjs  package.json  postcss.config.js  tailwind.config.ts
frontend/scripts/: tauri-auto.cjs
frontend/src/: global.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/migrations/: 20260505000000_add_voice_profiles_and_speaker_link.sql  20260505010000_add_email_to_voice_profiles.sql
frontend/src-tauri/src/: config.rs  lib.rs  main.rs  onboarding.rs  tray.rs
frontend/src-tauri/src/api/: api.rs
frontend/src-tauri/src/audio/: common.rs  device_monitor.rs  diagnostics.rs  import.rs  level_monitor.rs  pipeline.rs  recording_commands.rs  recording_manager.rs  recording_preferences.rs  recording_saver.rs  recording_state.rs  retranscription.rs  stream.rs  system_audio_commands.rs  system_audio_stream.rs  vad.rs
frontend/src-tauri/src/audio/devices/: configuration.rs  discovery.rs  fallback.rs
frontend/src-tauri/src/audio/devices/platform/: linux.rs  mod.rs
frontend/src-tauri/src/audio/transcription/: engine.rs  mod.rs  provider.rs  worker.rs
frontend/src-tauri/src/audio_v2/: compatibility.rs  lib.rs  limiter.rs  mixer.rs  normalizer.rs  recorder.rs  resampler.rs  stream.rs  sync.rs
frontend/src-tauri/src/database/: commands.rs  manager.rs  models.rs
frontend/src-tauri/src/database/repositories/: meeting.rs  mod.rs  setting.rs  transcript.rs  voice_profile.rs
frontend/src-tauri/src/speaker_diarization/: clusterer.rs  commands.rs  embedder.rs  mod.rs  model.rs  profile_matcher.rs  refinement.rs
frontend/src-tauri/src/summary/: mod.rs
frontend/src-tauri/src/summary/summary_engine/: client.rs  mod.rs
frontend/src-tauri/src/summary/templates/: defaults.rs
frontend/src-tauri/src/whisper_engine/: commands.rs  whisper_engine.rs
frontend/src/app/: RootLayoutClient.tsx  globals.css  layout.tsx  metadata.ts  page.tsx
frontend/src/app/_components/: SettingsModal.tsx  StatusOverlays.tsx  TranscriptPanel.tsx
frontend/src/app/_components/recording-page/: DeviceChip.tsx  DeviceSummary.tsx  HeroStartButton.tsx  MeetingNameInput.tsx  RecentMeetings.tsx  RecordingHero.tsx  RecordingTopBar.tsx
frontend/src/app/meeting-details/: page-content.tsx  page.tsx
frontend/src/app/notes/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: About.tsx  AnalyticsConsentSwitch.tsx  AnalyticsDataModal.tsx  AnalyticsProvider.tsx  AudioBackendSelector.tsx  AudioLevelMeter.tsx  BetaSettings.tsx  BuiltInModelManager.tsx  ChunkProgressDisplay.tsx  ComplianceNotification.tsx  ConfidenceIndicator.tsx  CustomDialog.tsx  DeviceSelection.tsx  EditableSpeakerChip.tsx  EditableTitle.tsx  EmptyStateSummary.tsx  Info.tsx  LanguageSelection.tsx  Logo.tsx  MessageToast.tsx  ModelDownloadProgress.tsx  ModelSettingsModal.tsx  ParakeetModelManager.tsx  PermissionWarning.tsx  PreferenceSettings.tsx  ProviderStack.tsx  RecordingControls.tsx  RecordingSettings.tsx  RecordingStatusBar.tsx  RootContent.tsx  SettingTabs.tsx  SpeakerSettings.tsx  SummaryModelSettings.tsx  TauriThemeSync.tsx  TitleBar.tsx  TranscriptSettings.tsx  TranscriptView.tsx  UpdateCheckProvider.tsx  UpdateDialog.tsx  UpdateNotification.tsx  (+2 more)
frontend/src/components/AISummary/: Block.tsx  Section.tsx  TiptapSummaryView.tsx  index.tsx
frontend/src/components/ConfirmationModel/: confirmation-modal.tsx
frontend/src/components/DatabaseImport/: HomebrewDatabaseDetector.tsx  LegacyDatabaseImport.tsx
frontend/src/components/ImportAudio/: ImportAudioDialog.tsx  ImportDropOverlay.tsx
frontend/src/components/MainContent/: index.tsx
frontend/src/components/MainNav/: index.tsx
frontend/src/components/MeetingDetails/: RetranscribeDialog.tsx  SummaryGeneratorButtonGroup.tsx  SummaryPanel.tsx  SummaryUpdaterButtonGroup.tsx  TranscriptButtonGroup.tsx  TranscriptPanel.tsx
frontend/src/components/Sidebar/: SidebarProvider.tsx  index.tsx
frontend/src/components/Sidebar/parts/: SidebarCollapsedRail.tsx  SidebarFooter.tsx  SidebarHeader.tsx  SidebarMeetingItem.tsx  SidebarMeetingsList.tsx  SidebarRecordingButton.tsx  SidebarSearch.tsx  (+1 more)
frontend/src/components/TiptapEditor/: Editor.tsx  MenuBar.tsx  menuBarState.ts
frontend/src/components/TranscriptRecovery/: TranscriptRecovery.tsx
frontend/src/components/bridges/: FileDropBridge.tsx  ProductionContextMenuBlocker.tsx  TrayRecordingBridge.tsx
frontend/src/components/layout/: AppShell.tsx  Page.tsx
frontend/src/components/onboarding/: OnboardingContainer.tsx  OnboardingFlow.tsx
frontend/src/components/shared/: DownloadProgressToast.tsx
frontend/src/components/ui/: accordion.tsx  alert.tsx  button-group.tsx  button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input-group.tsx  input.tsx  label.tsx  popover.tsx  scroll-area.tsx  select.tsx  sheet.tsx  spinner.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx  visually-hidden.tsx
frontend/src/constants/: audioFormats.ts
frontend/src/contexts/: ConfigContext.tsx  ImportDialogContext.tsx  OllamaDownloadContext.tsx  OnboardingContext.tsx  RecordingPostProcessingProvider.tsx  RecordingStateContext.tsx  TranscriptContext.tsx
frontend/src/hooks/: useAudioLevels.ts  useAutoScroll.ts  useImportAudio.ts  useModalState.ts  usePaginatedTranscripts.ts  usePermissionCheck.ts  usePlatform.ts  useRecordingStart.ts  useRecordingStateSync.ts  useRecordingStop.ts  useTranscriptRecovery.ts  useTranscriptStreaming.ts  useTranscriptionModels.ts  useUpdateCheck.ts
frontend/src/hooks/meeting-details/: useCopyOperations.ts  useMeetingData.ts  useSummaryGeneration.ts  useTemplates.ts
frontend/src/lib/: analytics.ts  builtin-ai.ts  parakeet.ts  recordingNotification.tsx  speaker-chip.ts  utils.ts  voice-profiles.ts  whisper.ts
frontend/src/services/: configService.ts  indexedDBService.ts  recordingService.ts  transcriptService.ts  updateService.ts
frontend/src/types/: index.ts  onboarding.ts
llama-helper/: Cargo.toml
llama-helper/src/: main.rs
(+8 files in other folders)
