[workspace]
resolver = "2"
members = [
    "frontend/src-tauri",
    "llama-helper"
]

# Shared workspace settings
[workspace.package]
edition = "2021"
rust-version = "1.85"

# Shared dependencies that can be inherited by workspace members
[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }

# Local patches must live at the workspace root — cargo ignores
# [patch.crates-io] sections in non-root package manifests.
[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", rev = "51c3b43" }
esaxx-rs = { git = "https://github.com/thewh1teagle/esaxx-rs.git", branch = "feat/dynamic-msvc-link" }

# Profiles must live at the workspace root (cargo ignores them in member
# manifests). meetily uses cargo's default release profile (opt-level=3)
# while llama-helper wants size-optimised "s" for faster sidecar startup.
[profile.release.package.llama-helper]
codegen-units = 1
opt-level = "s"
